    - Update patches/any/submitted-autotools.diff to detect the new triplet. 
    - Add patches/arm/submitted-armhf-triplet.diff to support the 
      new triplet.
  * Add patches/any/submitted-at-pagesize.diff from Fedora to fix 
    getpagesize() on static binaries.  Closes: #626379.
  * sysdeps/sparc.mk, sysdeps/sparc64.mk: disable multiarch support. 
    Workarounds: #625607.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 04 May 2011 19:53:33 +0200

eglibc (2.13-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * kfreebsd/local-sysdeps.diff, update to revision 3299 (from glibc-bsd),
    fix libc.so linking on kfreebsd after recent linker changes.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 02 May 2011 06:11:16 +0200

eglibc (2.13-1) unstable; urgency=low

  [ Aurelien Jarno ]
  * New upstream release:
    - Fix spurious warning in bswap_16() with -Wconversion.  Closes: 
      #561249.
    - Add back support for m68k.  Closes: #446503, #601126.
    - Add support for NTP API 4.  Closes: #558314.
    - Fix memchr() on alpha.  Closes: #521737.
    - Add optimized string functions via STT_GNU_IFUNC on PowerPC. Closes: 
      #408959.
    - Provide POSIX2008 compliant futimens().  Closes: #563724.
    - Fix auxilary cache file creation.  Closes: 588218.
    - Fix POSIX2008 compliance.  Closes: #610824.
    - Implement accurate fma() (according to C99).  Closes: #372544.
    - Build correctly with --no-add-needed.  Closes: #616298.
    - Fix SOCK_CLOEXEC value on hppa.  Closes: #617973.
    - Add inotify support on alpha.  Closes: #614099.
    - Update patches/locale/locale-print-LANGUAGE.diff.
    - Update patches/localedata/sort-UTF8-first.diff.
    - Remove patches/localedata/submitted-pt_BR.diff (merged upstream).
    - Update patches/localedata/locale-et_EE.diff (partially merged upstream).
    - Remove patches/localedata/locale-es_CR.diff (merged upstream).
    - Update patches/localedata/locales-fr.diff.