@@ -158,6 +158,7 @@ include debian/rules.d/*.mk
 
 clean:: unpatch
 	make -C $(CURDIR)/linuxthreads/man clean
+	make -C $(CURDIR)/debian/local/memcpy-wrapper clean
 	rm -f $(CURDIR)/po/*.mo
 	rm -rf $(patsubst %,debian/tmp-%,$(EGLIBC_PASSES))
 	rm -rf $(build-tree)
