@@ -16,6 +16,9 @@ eglibc (2.13-3) UNRELEASED; urgency=low
     getpagesize() on static binaries.  Closes: #626379.
   * sysdeps/sparc.mk, sysdeps/sparc64.mk: disable multiarch support. 
     Workarounds: #625607.
+  * debian/local/memcpy-wrapper/*: on amd64, provide and build two wrappers
+    to workaround and debug memcpy() issues. Explain how to use them in 
+    debian/debhelper.in/libc.NEWS.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 04 May 2011 19:53:33 +0200
 
